--- a/hw-1/README.me
+++ b/hw-1/README.me
@@ -1,1 +1,4 @@
 This is my submission for homework assignment 1. 
+
+Information about the assignment can be found below:
+http://usc.bootcampcontent.com/usc-boot-camp/USCLOS201710DATA5-Class-Repository-DATA/tree/master/Excel/Homework%20Instructions
