--- a/hw-9/database_engineering.ipynb
+++ b/hw-9/database_engineering.ipynb
@@ -27,19 +27,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm: hawaii.sqlite: No such file or directory\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!rm hawaii.sqlite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sqlalchemy\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine, MetaData\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy import Column, Integer, String, Numeric, Text, Float, DateTime"
    ]
   },
   {
@@ -50,11 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "import sqlalchemy\n",
-    "import pandas as pd\n",
-    "from sqlalchemy import create_engine, MetaData\n",
-    "from sqlalchemy.ext.declarative import declarative_base\n",
-    "from sqlalchemy import Column, Integer, String, Numeric, Text, Float"
+    "engine = create_engine(\"sqlite:///hawaii.sqlite\")"
    ]
   },
   {
@@ -65,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "engine = create_engine(\"sqlite:///hawaii.sqlite\")"
+    "conn = engine.connect()"
    ]
   },
   {
@@ -76,23 +79,12 @@
    },
    "outputs": [],
    "source": [
-    "conn = engine.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "Base = declarative_base()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,12 +96,12 @@
     "    latitude = Column(Float)\n",
     "    longitude = Column(Float)\n",
     "    elevation = Column(Integer)\n",
-    "    date = Column(String)\n",
     "    prcp = Column(Float)\n",
     "    tobs = Column(Integer)\n",
     "    month = Column(Integer)\n",
     "    day = Column(Integer)\n",
     "    year = Column(Integer)\n",
+    "    date_format = Column(DateTime)\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return f\"id={self.id}, name={self.name}\""
@@ -117,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -128,16 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data.csv')"
+    "data = pd.read_csv('datafile.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,12 +160,12 @@
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>elevation</th>\n",
-       "      <th>date</th>\n",
        "      <th>prcp</th>\n",
        "      <th>tobs</th>\n",
        "      <th>month</th>\n",
        "      <th>day</th>\n",
        "      <th>year</th>\n",
+       "      <th>date_format</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -182,12 +176,12 @@
        "      <td>21.2716</td>\n",
        "      <td>-157.8168</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1/1/10</td>\n",
        "      <td>0.080000</td>\n",
        "      <td>65</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2010</td>\n",
+       "      <td>2010-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -196,12 +190,12 @@
        "      <td>21.2716</td>\n",
        "      <td>-157.8168</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1/2/10</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>63</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2010</td>\n",
+       "      <td>2010-01-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -210,12 +204,12 @@
        "      <td>21.2716</td>\n",
        "      <td>-157.8168</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1/3/10</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>74</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2010</td>\n",
+       "      <td>2010-01-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -224,12 +218,12 @@
        "      <td>21.2716</td>\n",
        "      <td>-157.8168</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1/4/10</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>76</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>2010</td>\n",
+       "      <td>2010-01-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -238,34 +232,34 @@
        "      <td>21.2716</td>\n",
        "      <td>-157.8168</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1/6/10</td>\n",
        "      <td>0.040086</td>\n",
        "      <td>73</td>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>2010</td>\n",
+       "      <td>2010-01-06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       station                  name  latitude  longitude  elevation    date  \\\n",
-       "0  USC00519397  WAIKIKI 717.2, HI US   21.2716  -157.8168        3.0  1/1/10   \n",
-       "1  USC00519397  WAIKIKI 717.2, HI US   21.2716  -157.8168        3.0  1/2/10   \n",
-       "2  USC00519397  WAIKIKI 717.2, HI US   21.2716  -157.8168        3.0  1/3/10   \n",
-       "3  USC00519397  WAIKIKI 717.2, HI US   21.2716  -157.8168        3.0  1/4/10   \n",
-       "4  USC00519397  WAIKIKI 717.2, HI US   21.2716  -157.8168        3.0  1/6/10   \n",
+       "       station                  name  latitude  longitude  elevation  \\\n",
+       "0  USC00519397  WAIKIKI 717.2, HI US   21.2716  -157.8168        3.0   \n",
+       "1  USC00519397  WAIKIKI 717.2, HI US   21.2716  -157.8168        3.0   \n",
+       "2  USC00519397  WAIKIKI 717.2, HI US   21.2716  -157.8168        3.0   \n",
+       "3  USC00519397  WAIKIKI 717.2, HI US   21.2716  -157.8168        3.0   \n",
+       "4  USC00519397  WAIKIKI 717.2, HI US   21.2716  -157.8168        3.0   \n",
        "\n",
-       "       prcp  tobs  month  day  year  \n",
-       "0  0.080000    65      1    1  2010  \n",
-       "1  0.000000    63      1    2  2010  \n",
-       "2  0.000000    74      1    3  2010  \n",
-       "3  0.000000    76      1    4  2010  \n",
-       "4  0.040086    73      1    6  2010  "
+       "       prcp  tobs  month  day  year date_format  \n",
+       "0  0.080000    65      1    1  2010  2010-01-01  \n",
+       "1  0.000000    63      1    2  2010  2010-01-02  \n",
+       "2  0.000000    74      1    3  2010  2010-01-03  \n",
+       "3  0.000000    76      1    4  2010  2010-01-04  \n",
+       "4  0.040086    73      1    6  2010  2010-01-06  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,8 +269,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "### Problem with `date_format` when reading in CSV using Pandas\n",
+    "When reading in the `csv` file into Pandas, I noticed that the data types was not being imported correctly.  Namely, we noticed that the `date_format` column was being read in as a normal `object` and not a `datetime` object. This caused problems when inserting the data into the SQLite database since you'll get an error that reads `SQLite DateTime type only accepts Python datetime and date objects as input.`\n",
+    "\n",
+    "To get around this, I forced the data type of `date_format` to a `datetime` when importing the file using Pandas.\n",
+    "\n",
+    "The cell below shows that the type of `date_format` is an `object`, however two cells below show that the type of `date_format` is not a `datetime` object.\n",
+    "\n",
+    "More can be found [here](https://www.sqlite.org/datatype3.html) and [here](https://stackoverflow.com/questions/1933720/how-do-i-insert-datetime-value-into-a-sqlite-database).\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 19550 entries, 0 to 19549\n",
+      "Data columns (total 11 columns):\n",
+      "station        19550 non-null object\n",
+      "name           19550 non-null object\n",
+      "latitude       19550 non-null float64\n",
+      "longitude      19550 non-null float64\n",
+      "elevation      19550 non-null float64\n",
+      "prcp           19550 non-null float64\n",
+      "tobs           19550 non-null int64\n",
+      "month          19550 non-null int64\n",
+      "day            19550 non-null int64\n",
+      "year           19550 non-null int64\n",
+      "date_format    19550 non-null object\n",
+      "dtypes: float64(4), int64(4), object(3)\n",
+      "memory usage: 1.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['date_format'] = pd.to_datetime(data['date_format'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 19550 entries, 0 to 19549\n",
+      "Data columns (total 11 columns):\n",
+      "station        19550 non-null object\n",
+      "name           19550 non-null object\n",
+      "latitude       19550 non-null float64\n",
+      "longitude      19550 non-null float64\n",
+      "elevation      19550 non-null float64\n",
+      "prcp           19550 non-null float64\n",
+      "tobs           19550 non-null int64\n",
+      "month          19550 non-null int64\n",
+      "day            19550 non-null int64\n",
+      "year           19550 non-null int64\n",
+      "date_format    19550 non-null datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(4), int64(4), object(2)\n",
+      "memory usage: 1.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -287,13 +370,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'date': '1/1/10',\n",
+       "[{'date_format': Timestamp('2010-01-01 00:00:00'),\n",
        "  'day': 1,\n",
        "  'elevation': 3.0,\n",
        "  'latitude': 21.2716,\n",
@@ -304,7 +387,7 @@
        "  'station': 'USC00519397',\n",
        "  'tobs': 65,\n",
        "  'year': 2010},\n",
-       " {'date': '1/2/10',\n",
+       " {'date_format': Timestamp('2010-01-02 00:00:00'),\n",
        "  'day': 2,\n",
        "  'elevation': 3.0,\n",
        "  'latitude': 21.2716,\n",
@@ -315,7 +398,7 @@
        "  'station': 'USC00519397',\n",
        "  'tobs': 63,\n",
        "  'year': 2010},\n",
-       " {'date': '1/3/10',\n",
+       " {'date_format': Timestamp('2010-01-03 00:00:00'),\n",
        "  'day': 3,\n",
        "  'elevation': 3.0,\n",
        "  'latitude': 21.2716,\n",
@@ -326,7 +409,7 @@
        "  'station': 'USC00519397',\n",
        "  'tobs': 74,\n",
        "  'year': 2010},\n",
-       " {'date': '1/4/10',\n",
+       " {'date_format': Timestamp('2010-01-04 00:00:00'),\n",
        "  'day': 4,\n",
        "  'elevation': 3.0,\n",
        "  'latitude': 21.2716,\n",
@@ -337,20 +420,20 @@
        "  'station': 'USC00519397',\n",
        "  'tobs': 76,\n",
        "  'year': 2010},\n",
-       " {'date': '1/6/10',\n",
+       " {'date_format': Timestamp('2010-01-06 00:00:00'),\n",
        "  'day': 6,\n",
        "  'elevation': 3.0,\n",
        "  'latitude': 21.2716,\n",
        "  'longitude': -157.8168,\n",
        "  'month': 1,\n",
        "  'name': 'WAIKIKI 717.2, HI US',\n",
-       "  'prcp': 0.040085837,\n",
+       "  'prcp': 0.040085836909871206,\n",
        "  'station': 'USC00519397',\n",
        "  'tobs': 73,\n",
        "  'year': 2010}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -373,51 +456,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table = sqlalchemy.Table('hawaii_data', metadata, autoload=True) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x10c30f470>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conn.execute(table.delete())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x10c76b3c8>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conn.execute(table.insert(), data_dict)"
    ]
   },
   {
@@ -428,26 +473,7 @@
     {
      "data": {
       "text/plain": [
-       "[(1, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/1/10', 0.08, 65, 1, 1, 2010),\n",
-       " (2, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/2/10', 0.0, 63, 1, 2, 2010),\n",
-       " (3, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/3/10', 0.0, 74, 1, 3, 2010),\n",
-       " (4, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/4/10', 0.0, 76, 1, 4, 2010),\n",
-       " (5, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/6/10', 0.040085837, 73, 1, 6, 2010),\n",
-       " (6, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/7/10', 0.06, 70, 1, 7, 2010),\n",
-       " (7, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/8/10', 0.0, 64, 1, 8, 2010),\n",
-       " (8, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/9/10', 0.0, 68, 1, 9, 2010),\n",
-       " (9, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/10/10', 0.0, 73, 1, 10, 2010),\n",
-       " (10, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/11/10', 0.01, 64, 1, 11, 2010),\n",
-       " (11, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/12/10', 0.0, 61, 1, 12, 2010),\n",
-       " (12, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/14/10', 0.0, 66, 1, 14, 2010),\n",
-       " (13, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/15/10', 0.0, 65, 1, 15, 2010),\n",
-       " (14, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/16/10', 0.0, 68, 1, 16, 2010),\n",
-       " (15, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/17/10', 0.0, 64, 1, 17, 2010),\n",
-       " (16, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/18/10', 0.0, 72, 1, 18, 2010),\n",
-       " (17, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/19/10', 0.0, 66, 1, 19, 2010),\n",
-       " (18, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/20/10', 0.0, 66, 1, 20, 2010),\n",
-       " (19, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/21/10', 0.0, 69, 1, 21, 2010),\n",
-       " (20, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, '1/22/10', 0.0, 67, 1, 22, 2010)]"
+       "<sqlalchemy.engine.result.ResultProxy at 0x110c0e278>"
       ]
      },
      "execution_count": 17,
@@ -456,7 +482,94 @@
     }
    ],
    "source": [
-    "conn.execute(\"select * from hawaii_data limit 20\").fetchall()"
+    "conn.execute(table.delete())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.result.ResultProxy at 0x110bf8b70>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.execute(table.insert(), data_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1.06,)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.execute(\"select SUM(prcp) from hawaii_data WHERE (date_format BETWEEN '2010-01-01' AND '2010-01-02')\").fetchall()\n",
+    "#https://stackoverflow.com/questions/1469689/select-mysql-query-between-date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3, 0.08, 65, 1, 1, 2010, '2010-01-01 00:00:00.000000'),\n",
+       " (2725, 'USC00513117', 'KANEOHE 838.1, HI US', 21.4234, -157.8015, 14.6, 0.28, 67, 1, 1, 2010, '2010-01-01 00:00:00.000000'),\n",
+       " (9008, 'USC00518838', 'UPPER WAHIAWA 874.3, HI US', 21.4992, -158.0111, 306.6, 0.21, 72, 1, 1, 2010, '2010-01-01 00:00:00.000000'),\n",
+       " (9519, 'USC00519523', 'WAIMANALO EXPERIMENTAL FARM, HI US', 21.33556, -157.71139, 19.5, 0.15, 75, 1, 1, 2010, '2010-01-01 00:00:00.000000'),\n",
+       " (12188, 'USC00519281', 'WAIHEE 837.5, HI US', 21.45167, -157.84888999999995, 32.9, 0.15, 70, 1, 1, 2010, '2010-01-01 00:00:00.000000'),\n",
+       " (14960, 'USC00511918', 'HONOLULU OBSERVATORY 702.2, HI US', 21.3152, -157.9992, 0.9, 0.05, 66, 1, 1, 2010, '2010-01-01 00:00:00.000000'),\n",
+       " (16939, 'USC00516128', 'MANOA LYON ARBO 785.2, HI US', 21.3331, -157.8025, 152.4, 0.14, 73, 1, 1, 2010, '2010-01-01 00:00:00.000000')]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.execute(\"select * from hawaii_data WHERE (date_format BETWEEN '2010-01-01' AND '2010-01-02')\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.06"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.08 + 0.28 + 0.21 + 0.15 + 0.15 + 0.05 + 0.14"
    ]
   },
   {
