--- a/hw-9/database_engineering.ipynb
+++ b/hw-9/database_engineering.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!rm hawaii.sqlite"
@@ -85,7 +87,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Data(Base):\n",
@@ -319,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data['date_format'] = pd.to_datetime(data['date_format'])"
