--- a/hw-9/data_engineering.ipynb
+++ b/hw-9/data_engineering.ipynb
@@ -2162,7 +2162,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.to_csv('datafile.csv', index=False)"
