--- a/hw-9/climate_app.ipynb
+++ b/hw-9/climate_app.ipynb
@@ -45,6 +45,165 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import datetime \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine, func\n",
+    "from flask import Flask, jsonify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection_string = 'sqlite:///hawaii.sqlite'\n",
+    "engine = create_engine(connection_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Base = automap_base()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.prepare(engine, reflect = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Hawaii = Base.classes.hawaii_data\n",
+    "session = Session(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "first_row = session.query(Hawaii).first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1085814a8>,\n",
+       " 'date_format': datetime.datetime(2010, 1, 1, 0, 0),\n",
+       " 'day': 1,\n",
+       " 'elevation': 3,\n",
+       " 'id': 1,\n",
+       " 'latitude': 21.2716,\n",
+       " 'longitude': -157.8168,\n",
+       " 'month': 1,\n",
+       " 'name': 'WAIKIKI 717.2, HI US',\n",
+       " 'prcp': 0.08,\n",
+       " 'station': 'USC00519397',\n",
+       " 'tobs': 65,\n",
+       " 'year': 2010}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_row.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "app = Flask(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route('/')\n",
+    "def index():\n",
+    "    \"\"\"Welcome.  These are all of the available API routes\"\"\"\n",
+    "    \n",
+    "    return(f\"Available Routes:<br>\"\n",
+    "           f\"/api/v1.0/precipitation\"\n",
+    "           f\"/api/v1.0/stations<br>\"  \n",
+    "           f\"/api/v1.0/tobs<br>\"  \n",
+    "           f\"/api/v1.0/<start> and /api/v1.0/<start>/<end><br>\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route('/api/v1.0/precipitation')\n",
+    "def precipitation():\n",
+    "    results = session.query(Hawaii).all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Need to convert SQL query into a ORM query.\n",
+    "\n",
+    "#query = \"\"\"\n",
+    "#        select * \n",
+    "#        from hawaii_data \n",
+    "#        WHERE (date_format BETWEEN '2016-08-23 00:00:00.000000' AND '2017-08-23 00:00:00.000000')\n",
+    "#        \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
