More work on app.

--- a/hw-9/database_engineering.ipynb
+++ b/hw-9/database_engineering.ipynb
@@ -130,7 +130,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('datafile.csv')"
+    "data = pd.read_csv('datafile.csv', parse_dates=data['date_format'])"
    ]
   },
   {
