--- a/hw-13/appDev.ipynb
+++ b/hw-13/appDev.ipynb
@@ -1454,7 +1454,9 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -5417,30 +5419,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "import requests as r\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "collapsed": true
+   },
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "url = 'http://127.0.0.1:5000/api/v1/metadata/940'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "data = r.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BBTYPE': 'I',\n",
+       " 'ETHNICITY': 'Caucasian',\n",
+       " 'GENDER': 'F',\n",
+       " 'LOCATION': 'Beaufort/NC',\n",
+       " 'SAMPLEID': 940,\n",
+       " 'age': 24}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.json()[0]"
+   ]
   },
   {
    "cell_type": "code",
